# so101-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: setup.md  voice-control.md  workflow.md
docs/experiments/: color-select.md  smolvla-vs-act.md
scripts/: _env.sh.example  _orchestrate.py  calibrate.sh  eval.sh  eval_async.sh  find-port.sh  go_home.py  install.sh  record.sh  setup-motors-follower.sh  setup-motors-leader.sh  teleoperate.sh  train.sh  voice_control.py  voice_web.html  voice_web.py
