[project]
name = "so101-lab"
version = "0.1.0"
description = "SO-101 dual-arm experiments with HuggingFace LeRobot"
# lerobot / Python ともにバージョンを固定する。緩めると uv が Python バージョンごとに
# 別の lerobot を解決してしまい（<3.12 → 0.4.4, >=3.12 → 0.6.0）、Mac で収録した
# データセットを学習サーバ側で読めなくなる。
requires-python = ">=3.12,<3.13"
dependencies = [
    # feetech: SO-101 のサーボ制御。smolvla: 基盤 VLA の fine-tune/推論に必要な
    # transformers 等（学習=g27 も 推論=Mac も両方で要る）。
    # async: gRPC ベースの分割推論（policy_server=GPU機 ↔ robot_client=Mac実機）。
    # 重い VLA を Mac で 3Hz でなく、GPU 機で回して 30Hz を狙うため。
    "lerobot[feetech,smolvla,async]==0.5.1",
]
